# magic-stubs

./: .gitignore  readme.md  setup.cfg  test.py  test10.py  test11.py  test12.py  test13.py  test14.py  test15.py  test16.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py
.github/workflows/: publish.yml
examples/: class_fun.py  mandelbrot.py  matrix.py  primes.py  random4.py  test.py
src/magic_python_english/: extension.py
src/magic_python_english.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/magic_stubs/: extension.py
src/magic_stubs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
