[metadata]
name = magic_stubs
version = 0.2.2

description = Auto implement function stubs
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/jackpeck/magic-stubs
project_urls =
    Bug Tracker = https://github.com/jackpeck/magic-stubs/issues

author = jackpeck

license = MIT
license_files = LICENSE

platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    astor
    appdirs
    openai
    magic_codec
packages = find:
zip_safe = False
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
* = 
    py.typed

[flake8]
extend-ignore = D1, D2, E1, E2, E3, E501, W1, W2, W3, W5
